# basilisp-blender

./: .gitignore  API.md  CHANGELOG.md  LICENSE_EXTENSION  README.md  bb.edn  pyproject.toml
.github/workflows/: checks.yml  release.yaml  tests-run.yml
examples/: torus_pattern.lpy
scripts/: bb_addon_create.py  bb_extension_create.lpy  bb_package_install.py  blender_install.py
src/basilisp_blender/: __init__.py  bpy_utils.lpy  control_panel.lpy  eval.py  nrepl.py  nrepl_server.lpy  utils.lpy
src/dev/: dev_utils.py  nrepl_panel_addon.py
tests/: conftest.py
tests/basilisp_blender/: eval_test.py  nrepl_server_test.lpy  nrepl_test.py  utils_test.lpy
tests/basilisp_blender/integration/: bpy_utils_test.lpy  control_panel_test.lpy  int_eval_test.py  int_nrepl_test.py  integ_utils.py  integ_utils_test.py  test_utils.lpy  test_utils.py
