[tool.poetry]
name = "basilisp-blender"
version = "0.3.0"
description = ""
authors = ["ikappaki"]
readme = "README.md"
packages = [
    { include = "basilisp_blender", from = "src" },
]

[project.urls]
Homepage = "https://github.com/ikappaki/basilisp-blender"

[tool.poetry.dependencies]
python = "^3.9"
basilisp = ">=0.3.6"
basilisp-nrepl-async = ">=0.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
nrepl-python-client = "^0.0.3"
basilisp-pprint = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest-xvfb = "^3.0.0"
requests = "^2.32.3"
black = "^24.4.2"
isort = "^5.13.2"
tomli-w = "^1.1.0"

[build-system]
requires = ["poetry-core<2"]
build-backend = "poetry.core.masonry.api"
