[tool.poetry]
name = "basilisp-blender"
version = "0.4.2"
description = ""
authors = ["ikappaki"]
homepage = "https://github.com/ikappaki/basilisp-blender"
readme = "README.md"
packages = [
    { include = "basilisp_blender", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.9"
basilisp = ">=0.4.0"
basilisp-nrepl-async = ">=0.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
nrepl-python-client = "^0.0.3"
basilisp-pprint = ">=0.2.0"


[tool.poetry.group.dev.dependencies]
pytest-xvfb = "^3.0.0"
requests = "^2.32.3"
black = "^24.4.2"
isort = "^5.13.2"
tomli-w = "^1.1.0"

[build-system]
requires = ["poetry-core<2"]
build-backend = "poetry.core.masonry.api"
